--- a/public/css/main.css
+++ b/public/css/main.css
@@ -202,7 +202,7 @@ footer a:hover {
 .tabcontent {
     display: none;
     padding: 8px;
-    max-height: 200px;
+    max-height: min-content;
     overflow-y: scroll;
 }
 
